--- a/views/template/head.ejs
+++ b/views/template/head.ejs
@@ -15,6 +15,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 
     <style>
+        body {
+            overflow-x: hidden;
+        }
         #map {
             height: 100vh;
             width: 100%;
