base app layout

--- a/views/template/head.ejs
+++ b/views/template/head.ejs
@@ -10,7 +10,9 @@
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
 
+    <link rel="stylesheet" href="/css/app.css">
     <script src='/js/map.js'></script>
+    
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 
@@ -18,9 +20,6 @@
         body {
             overflow-x: hidden;
         }
-        #map {
-            height: 100vh;
-            width: 100%;
-        }
+        
     </style>
 </head>
