--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,12 +1,73 @@
 <%- include('../template/head')-%>
 
 <body>
-    <div class="row">
-        <div class="col-sm-3">
-            <button class="btn btn-danger" onclick="deleteExistingRoute()">delete route</button>
-            <button class="btn btn-primary" onclick="addNewRoute()">add route</button>
+    <!-- <div class="row"> -->
+    <div>
+        <!-- <div class="col-sm-3 pr-0" id="sidebar-app"> -->
+        <div class="" id="sidebar-app">
+            <div>
+                <button class="btn btn-danger" onclick="deleteExistingRoute()">delete route</button>
+                <button class="btn btn-primary" onclick="addNewRoute()">add route</button>
+            </div>  
+            <div class="d-flex flex-column mt-1 mx-2" style="border: red 1px solid;">
+
+                <div class="p-1 mt-1 card" style="border: blue 1px solid;">
+                    <div class="card-body">
+                        <div class="d-flex">
+                            <div class="d-flex flex-column align-items-center p-0" style="flex: 0 0 50px;">
+                                <h2 class="align-self-center" style="">A</h2>
+                                <span class="badge badge-danger">negatif</span>
+                            </div>
+                            <div class="pl-2 d-flex align-items-center">
+                                <h5 class="align-self-center">Rafi Nizar Abiyyi</h5>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-6">
+                                <div class="row panel-badan">
+                                    <div class="col-12">
+                                        Berat Badan:
+                                    </div>
+                                    <div class="col-12">
+                                        49 kg
+                                    </div>
+                                </div>
+                                <div class="row panel-badan">
+                                    <div class="col-12">
+                                        Tinggi Badan:
+                                    </div>
+                                    <div class="col-12">
+                                        178 cm
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <div class="row panel-badan">
+                                    <div class="col-12">
+                                        email:
+                                    </div>
+                                    <div class="col-12">
+                                        rafi.nizar.dev1@gmail.com
+                                    </div>
+                                </div>
+                                <div class="row panel-badan">
+                                    <div class="col-12">
+                                        No Hp:
+                                    </div>
+                                    <div class="col-12">
+                                        0812 14045
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+               
+            </div>
         </div>
-        <div class="col">
+
+        <!-- <div class="col pl-0" id="map-app"> -->
+        <div class="" id="map-app">
             <div id='map'></div>
         </div>
     </div>
