--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -8,25 +8,31 @@
             <div>
                 <button class="btn btn-danger" onclick="deleteExistingRoute()">delete route</button>
                 <button class="btn btn-primary" onclick="addNewRoute()">add route</button>
+                <button class="btn btn-success" id="test">test button</button>
             </div>  
-            <div class="d-flex flex-column mt-1 mx-2" style="border: red 1px solid;">
+            <div class="d-flex flex-column mt-1 mx-2" id="list-pendonor">
 
-                <div class="p-1 mt-1 card" style="border: blue 1px solid;">
+                <div class="p-1 mt-1 card">
                     <div class="card-body">
                         <div class="d-flex">
                             <div class="d-flex flex-column align-items-center p-0" style="flex: 0 0 50px;">
-                                <h2 class="align-self-center" style="">A</h2>
-                                <span class="badge badge-danger">negatif</span>
+                                <h2 class="align-self-center" style="">O</h2>
+                                <span class="badge badge-danger">positif</span>
                             </div>
                             <div class="pl-2 d-flex align-items-center">
-                                <h5 class="align-self-center">Rafi Nizar Abiyyi</h5>
+                                <h5 class="align-self-center">Dummy Data</h5>
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="row mt-2">
                             <div class="col-6">
                                 <div class="row panel-badan">
                                     <div class="col-12">
-                                        Berat Badan:
+                                        <strong>Umur:</strong> 21
+                                    </div>
+                                </div>
+                                <div class="row panel-badan">
+                                    <div class="col-12">
+                                        <strong>Berat Badan:</strong>
                                     </div>
                                     <div class="col-12">
                                         49 kg
@@ -34,17 +40,18 @@
                                 </div>
                                 <div class="row panel-badan">
                                     <div class="col-12">
-                                        Tinggi Badan:
+                                        <strong>Tinggi Badan:</strong>
                                     </div>
                                     <div class="col-12">
                                         178 cm
                                     </div>
                                 </div>
+                                
                             </div>
                             <div class="col-6">
                                 <div class="row panel-badan">
                                     <div class="col-12">
-                                        email:
+                                        <strong>Email:</strong>
                                     </div>
                                     <div class="col-12">
                                         rafi.nizar.dev1@gmail.com
@@ -52,7 +59,7 @@
                                 </div>
                                 <div class="row panel-badan">
                                     <div class="col-12">
-                                        No Hp:
+                                        <strong>No Hp:</strong>
                                     </div>
                                     <div class="col-12">
                                         0812 14045
@@ -77,6 +84,8 @@
     
     
     <script>
+        
+
         // https://api.mapbox.com/directions/v5/mapbox/driving/106.1502463,-6.0947954;106.152018,-6.112777?overview=full&geometries=geojson&access_token=
     </script>
 </body>
