card active state

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -12,12 +12,12 @@
             </div>  
             <div class="d-flex flex-column mt-1 mx-2" id="list-pendonor">
 
-                <div class="p-1 mt-1 card">
+                <div class="p-1 mt-1 card" id="pendonor-1111" onclick="pendonorClick(this)">
                     <div class="card-body">
                         <div class="d-flex">
                             <div class="d-flex flex-column align-items-center p-0" style="flex: 0 0 50px;">
                                 <h2 class="align-self-center" style="">O</h2>
-                                <span class="badge badge-danger">positif</span>
+                                <span class="badge badge-resus badge-danger ">positif</span>
                             </div>
                             <div class="pl-2 d-flex align-items-center">
                                 <h5 class="align-self-center">Dummy Data</h5>
