--- a/public/css/app.css
+++ b/public/css/app.css
@@ -19,6 +19,16 @@
     bottom: 0;
 }
 
+.card-pendonor-active {
+    background-color: #dc3545 !important;
+    color: aliceblue;
+}
+
+.badge-resus-active {
+    background-color: aliceblue !important;
+    color: #dc3545 !important;
+}
+
 .panel-badan {
     font-size: 13px;
 }
