--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -7,7 +7,7 @@
         <div class="" id="sidebar-app">
             <div>
                 <button class="btn btn-danger" onclick="deleteExistingRoute()">delete route</button>
-                <button class="btn btn-primary" onclick="addNewRoute()">add route</button>
+                <button class="btn btn-primary" onclick="addRoute()">add route</button>
                 <button class="btn btn-success" id="test">test button</button>
             </div>  
             <div class="d-flex flex-column mt-1 mx-2" id="list-pendonor">
