--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -74,12 +74,15 @@
                                 </div>
                             </div>
                             <div class="col-12 row">
-                                <di class="col-4">
-                                    <label for="email">Lokasi anda (klik pada peta)</label>
-                                    <input type="text" id="inputLong" name="long" value="" readonly >
-                                    <input type="text" id="inputLat" name="lat" value="" readonly >
-                                    
-                                    <div class="mt-2">
+                                <di class="col-4 row">
+                                    <div class="col-12 mb-0">
+                                        <label style="display: block;" for="email">Lokasi anda (klik pada peta)</label>
+        
+                                        <input type="text" id="inputLong" name="long" value="" readonly >
+                                        <input type="text" id="inputLat" name="lat" value="" readonly >
+                                    </div>
+                                
+                                    <div class="col-4 mt-2">
                                         <button type="submit" id="input-submit" class="btn btn-primary">Tambah</button>
                                         <div id="input-cancel" class="btn btn-default">Kembali</div>
                                     </div>
